# pahome

./: .env.example  .gitignore  Dockerfile  MQTT.md  README.md  alembic.ini  broken.txt  conf.py  docker-compose.yml  entry.sh  parse.py  pyproject.toml  server.py
console/expose/: service.py
console/model/: expose.py
database/: functions.py
devices/device/: model.py  repository.py  service.py  use_case.py
events/event_log/: model.py  repository.py  service.py
events/model/: mqtt.py
events/mqtt/: listener.py
mds/devices/: 0140302.md  014G2461.md  020B0B.md  0402946.md  046677476816.md  046677551780.md  046677552343.md  046677803087.md  (+1399 more)
migrations/: env.py
schemes/: acova_alcantara2.json  acova_percale2.json  adeo_9cza_a806st_q1a.json  adeo_9cza_a806st_q1z.json  adeo_9cza_g1521_q1a.json  adeo_9cza_m350st_q1a.json  adeo_9cza_p470t_a1a.json  adeo_hr_c99c_z_c045.json  adeo_ia_cdzfb2aa007na_mzn_01.json  adeo_ig_cdzotaag014ra_man.json  adeo_ip_cdzotaap005ja_man.json  adeo_ldsenk01f.json  adeo_ldsenk02f.json  adeo_ldsenk10.json  adurosmart_15090054.json  adurosmart_81809_81813.json  adurosmart_81825.json  adurosmart_81848.json  adurosmart_81849.json  adurosmart_81855.json  adurosmart_81895.json  adurosmart_bpu3.json  airam_4713406.json  airam_4713407.json  airam_airam_ctr.u.json  airam_ctr.ubx.json  ajax_online_aj_zb_gu10.json  ajax_online_aj_zigbee_led_strip.json  ajax_online_aj_zigproa60.json  ajax_online_zb_a60_rgbcw.json  alchemy_al8tc13w_ap.json  aldi_141l100rc.json  aldi_c422ac11d41h140.0w.json  aldi_c422ac14d41h140.0w.json  aldi_f122sb62h22a4.5w.json  aldi_l122aa63h11a6.5w.json  aldi_l122ff63h11a5.0w.json  alecto_smart_heat10.json  anchor_67200bl.json  atsmart_z6.json  (+1897 more)
tests/: conftest.py
(+13 files in other folders)
